[UPDATE] add unit test

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,9 @@
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": false,
     "strictBindCallApply": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "paths": {
+      "src/*": ["src/*"]
+    }
   }
 }
